--- a/css/style.css
+++ b/css/style.css
@@ -106,14 +106,14 @@ section>aside{
     display: flex;
     height: 100%;
     flex-direction: column;
-    /*background-color: white; */
+    background-color: white;
 }
 
 #about-me>p{
     flex: 7;
 }
 
-#img-container{
+#img-container-prof-emanoela{
     display: none;
     background-image: url("../res/prof_emanoela.png");
     background-repeat: no-repeat;
@@ -137,7 +137,7 @@ section>aside{
 footer{
     width: 100%;
     height: 80px;
-    background-color: rgba(97, 90, 225);
+    background-color: rgb(97, 90, 225);
     text-align: center;
     display: flex;
     justify-content: center;
