--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,16 @@ body{
 }
 
 #banner{
+    height: 70px;
     background-color: rgba(97, 90, 225, 0.70);
     background-size: auto 100%;
     border-bottom: 4px solid var(--default-border-color);
-    height: 70px;
     position: sticky;
     top: 0px
 }
 
 #logo{
+    margin: 0;
     display: flex;
     height: 100%;
     text-decoration: none;
@@ -55,9 +56,12 @@ body{
     color: white;
 }
 
-h1,h2,h3{
-    margin: auto;
+h1,h2,h3,h4{
     padding: 5px 0 5px 0;
+}
+
+h2,h3{
+    margin: -20px -20px 0 -20px;
 }
 
 h2{
@@ -74,6 +78,48 @@ h3{
     padding-left: 10px;
 }
 
+h4{
+    margin: 0px;
+}
+
+p{
+    margin: 20px 0 0 0;
+    text-align: justify;
+}
+
+
+a{
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.nav-body{
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.nav-body>a{
+    width: auto;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: rgb(144, 138, 255);
+    color: #1a1a1a;
+    border: 3px outset rgb(144, 138, 255);
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+}
+
+.nav-body>a:hover{
+    border: 3px solid rgb(72, 62, 252);
+}
+
+.nav-body>.a-current{
+    background-color: rgb(94, 86, 255);
+    color: white;
+}
+
 section{
     padding: 40px;
     border: 4px solid var(--default-border-color);
@@ -81,7 +127,7 @@ section{
     display: flex;
 }
 
-section>article, section>aside{
+section>article, section>aside>article{
     padding: 20px;
     margin: 5px;
     background-color: white;
@@ -94,9 +140,10 @@ section>article{
 }
 
 section>aside{
-    height: 510px;
-    background-color: white;
-    border-radius: 10px;
+    flex: 1;
+}
+
+section>aside>article{
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -104,7 +151,6 @@ section>aside{
 
 #about-me{
     display: flex;
-    height: 100%;
     flex-direction: column;
     background-color: white;
 }
@@ -123,15 +169,23 @@ section>aside{
     min-height: 100px;
 }
 
-.description{
-    background-color:  rgb(214, 211, 255);
-    margin: 0 0 30px 0;
+.links{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
 }
 
-.description>p{
-    padding: 10px;
-    margin: 0;
-    text-align: justify;
+.links>a>img{
+    height: 50px;
+    width: auto;   
+    border-radius: 0px;
+    border: 5px solid rgba(0,0,0,0);
+}
+
+.links>a>img:hover{
+    border-radius: 40px;
+    border: 5px solid var(--default-border-color);
 }
 
 footer{
@@ -143,9 +197,11 @@ footer{
     justify-content: center;
     align-items: center;
 }
+
 footer>p{
     flex: 1;
     margin: 0;
+    text-align: center;
     color: white;
 }
 
@@ -161,7 +217,14 @@ footer>p{
 }
 
 @media screen and (min-width: 840px) and (max-width: 1024px){
-    #img-container{
+    #img-container-prof-emanoela{
         display: block;
     }
+}
+
+@media screen and (max-width: 610px){
+    .nav-body{
+        flex-direction: column;
+    }
+    
 }
